2007-03-14  Karsten Bräckelmann  <guenther@rudersport.de>

	* www.gnome.org/projects/garnome/index.html: Welcome to 2.18.0!

2007-03-14  Elijah Newren  <newren gmail com>

	* www.gnome.org/htaccess:
	redirect /start/stable to /start/2.18 instead of /start/2.16.

	* www.gnome.org/start/2.18:
	Removing not-yet-official warning, and update link to community
	announcement (I hope it will be the right link; depends on if
	anyone sends another email before the web page is live) and
	uncomment it.

2007-03-14  Vincent Untz  <vuntz@gnome.org>

	* www.gnome.org/start/Makefile.am: put 2.18 at the beginning of
	SUBDIRS, hoping this will help the 2.18 pages get updated faster.

2007-03-10  Vincent Untz  <vuntz@gnome.org>

	* configure.in:
	* www.gnome.org/start/2.18:
	* www.gnome.org/start/Makefile.am: add GNOME 2.18 pages, copied from
	2.16 pages and with the current version of the release notes

2007-03-07  Lucas Rocha  <lucasr@gnome.org>

	* www.gnome.org/index.html: add GNOME Journal March Edition
	announcement in latest news.

2007-03-06  Thomas Wood  <thos@gnome.org>

	* www.gnome.org/index.html: Clarify location of GUADEMY in upcoming events,
	and cite GPUL as oranisors. Fixes bug 413849.

2007-03-06  Olav Vitters  <olav@bkor.dhs.org>

	* www.gnome.org/htaccess: redirect /projects/soc to
	http://live.gnome.org/SummerOfCode2007.

2007-03-02  Thomas Wood  <thos@gnome.org>

	* www.gnome.org/index.html: Fix a typo

2007-02-28  Thomas Wood  <thos@gnome.org>

	* www.gnome.org/img/flash/Makefile.am: Add the GUADEC call for papers image

2007-02-28  Thomas Wood  <thos@gnome.org>

	* www.gnome.org/index.html: Add information about Guademy

2007-02-28  Thomas Wood  <thos@gnome.org>

	* www.gnome.org/index.html: FOSDEM has finished for this year.
	Add image about GUADEC call for papers.
	* www.gnome.org/img/flash/guadec-callforpapers.png: Added

2007-02-22  Thomas Wood  <thos@gnome.org>

	* www.gnome.org/index.html: Correct the location of Brussels
