@@ -1,4 +1,10 @@
-SUBDIRS = 2.18 2.0 2.1 2.2 2.3 2.4 2.5 2.6 2.7 2.8 2.9 2.10 2.11 2.12 2.14 2.16
+## Ancient SUBDIRS that we don't want included because regenerating
+## release notes every freakin' build really, really sucks; they
+## should just be considered static.
+STATIC_SUBDIRS = 2.0 2.1 2.2 2.3 2.4 2.5 2.6 2.7 2.8 2.9 2.10 2.11 2.12 2.14 2.16
+
+## SUBDIRS we want to still be regenerated
+SUBDIRS = 2.18
 
 urlpath = /start
 
