@@ -1,3 +1,8 @@
+2007-03-14  Elijah Newren  <newren gmail com>
+
+	* www.gnome.org/start/Makefile.am:
+	Have the build system skip building release notes for past releases
+
 2007-03-14  Karsten Bräckelmann  <guenther@rudersport.de>
 
 	* www.gnome.org/projects/garnome/index.html: Welcome to 2.18.0!
